<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbackground"
    tools:context=".Introduction">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical">

    <EditText
        android:id="@+id/signusername"
        android:hint="@string/Create_User_Name"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_background"
        android:drawableStart="@drawable/small"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:singleLine="true" />

    <EditText
        android:id="@+id/signpassword"
        android:inputType="textPassword"
        android:hint="@string/Create_Password"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_background"
        android:drawableStart="@drawable/pass"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:singleLine="true" />

    <Button
        android:id="@+id/btnregister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/btn_register"
        android:text="@string/Register"
        android:textColor="@color/white"
        android:layout_marginTop="40dp"
        android:textSize="21sp" />

    </LinearLayout>
</RelativeLayout>